--- a/ports/k210-standalone/Makefile
+++ b/ports/k210-standalone/Makefile
@@ -27,6 +27,7 @@ INC += -I$(TOP)/lib/timeutils
 INC += -I$(MPY_MOD_PATH)/machine/include
 INC += -I$(MPY_MOD_PATH)/uos/include
 INC += -I$(MPY_MOD_PATH)/app/include
+#INC += -I$(MPY_MOD_PATH)/socket/include
 
 # board drivers header
 INC += -I$(BOARD_DRIVERS_PATH)/include
@@ -139,9 +140,11 @@ MODULES_SRC_C= \
 		$(MPY_MOD_PATH)/machine/machine_ws2812.c \
 		$(MPY_MOD_PATH)/machine/machine_test.c \
 		$(MPY_MOD_PATH)/machine/machine_devmem.c\
+		$(MPY_MOD_PATH)/machine/machine_esp8285.c\
 		$(MPY_MOD_PATH)/app/modapp.c \
 		$(MPY_MOD_PATH)/app/vi.c \
-		$(MPY_MOD_PATH)/app/app_vi.c
+		$(MPY_MOD_PATH)/app/app_vi.c\
+		$(MPY_MOD_PATH)/socket/modusocket.c
 
 
 LIB_SRC_C ?=
